test/forgetConstInvalid.slq
// cannot forget const
def f1(const a:ğ”¹){
	forget(a); // error
}